<resources>
    <string name="app_name">"   Trabajo Grupo 5"</string>
    <string name="title_activity_main2">Capítulos</string>
    <string name="title_activity_main3">Capítulos</string>
    <string name="title_activity_menuejercicios">Ejercicios</string>
    <string name="title_activity_c1_01">1_01</string>
    <string name="acerda_de">Acerda de:</string>
    <string name="capitulos">Capítulos</string>
    <string name="title_activity_acerda_de">Acerda De</string>
    <string-array name="names_array">
        <item>Amaya Cruz David Alexander</item>
        <item>Bastidas Aslalema Dayana Carolina</item>
        <item>Centeno Alomoto Mayra Gabriela</item>
        <item>Chalco Pillajo Luis Eduardo</item>
        <item>Guachan Martínez Marcia Elizabeth</item>
        <item>Noguera Vásconez Diego Frans </item>
        <item>Suntaxi Puga Stalin Andres </item>
    </string-array>
    <string-array name="acerca_de_array">
        <item> Universidad Central del Ecuador</item>
        <item>Optativa3 - Dispositivos Móviles</item>
        <item>Profesor: Ing. Luis Felipe Borja</item>
        <item>Grupo 5</item>
        <item>Jdk version:    8</item>
        <item>Android Studio: 2.1.1</item>
        <item>minSdkVersion:  19</item>
        <item>targetSdkVersion:   23"</item>
        <item>compileSdkVersion:  23</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_capitulos">MenuCapitulos</string>
    <string name="title_activity_c1">C1</string>
    <string name="title_activity_c2">C2</string>
    <string name="title_activity_c3">C3</string>
    <string name="title_activity_c4">C4</string>
    <string name="title_activity_c2_19">c2_19</string>
    <string name="title_activity_e1_ActionBar">ActionBar</string>
    <string name="title_activity_e1_ActionBar1">ActionBarRecipes</string>
    <string name="title_activity_e2_ActivityOrientation">SensorLandscape</string>
    <string name="title_activity_e2_ActivityOrientation1">Landscape</string>
    <string name="title_activity_e2_ActivityOrientation2">Portrait</string>
    <string name="title_activity_e2_ActivityOrientation3">Menu</string>
    <string name="title_activity_e3_LockActivity">Dynamic Orientation Locking</string>
    <string name="title_activity_e4_ManuallyHandlingRotation">Manually Handling Rotation</string>
    <string name="title_activity_e5_contextmenu">ContextMenu</string>
    <string name="title_activity_e6_dialogs">Dialogs Recipes</string>
    <string name="title_activity_e6_dialogs1">Dialogs1</string>
    <string name="title_activity_e7_optionsmenu">Options Menu</string>
    <string name="title_activity_e8_customenu">CustomBack</string>
    <string name="title_activity_e9_customback">CustomBack</string>
    <string name="title_activity_e10_TextWatchers">TextWatchers</string>
    <string name="title_activity_e10_MyActivity">TextWatchers</string>
    <string name="title_activity_e10_Activity">TextWatchers</string>
    <string name="title_activity_e11_customimw">CustomIME</string>
    <string name="title_activity_e13_customtouch">CustomTouch</string>
    <string name="title_activity_e14_TouchEvents">Touch Events</string>
    <string name="title_activity_e1314TouchEvents">Touch EventsCustom</string>
    <string name="title_activity_e15_touchintercept">TouchIntercep</string>
    <string name="title_activity_e16_draganddrop">DragAndDrop</string>
    <string name="title_activity_e17_actionbar">ActionBarDrawer</string>
    <string name="title_activity_e17_toolbar">Toolbar Drawer</string>
    <string name="title_activity_e18_fagment_pager">Fragment ViewPager</string>
    <string name="title_activity_e18_pager">ViewPager</string>
    <string name="title_activity_e19_action_tabs">Tabs</string>
    <string name="title_activity_e01_Styled_Widgets">Styled Widgets</string>
    <string name="title_activity_e01_theme">Custom Theme</string>
    <string name="title_activity_c1e02_app_name">System UI Control</string>
    <string name="title_activity_c1e03_CustomWidgets">Custom Widget</string>
    <string name="title_activity_c1e04_AnimateProperty">AnimateProperty</string>
    <string name="title_activity_c1e042_AnimateViewProperty">AnimateViewProperty</string>
    <string name="title_activity_c1e043_AnimationsXML">Animations XML</string>
    <string name="title_activity_c1e05_AnimateLayout">Animate Layout</string>
    <string name="title_activity_c1e06_UniversalApp">Universal App</string>
    <string name="title_activity_c1e07_AdapterViewEmpty">AdapterView Empty</string>
    <string name="title_activity_c1e08_CustomList">Custom List</string>
    <string name="title_activity_c1e09_ListSections">List Sections</string>
    <string name="title_activity_c1e10_CompoundControls">Compound Controls</string>
    <string name="title_activity_c1e11_TransitionAnimations">TransitionAnimations</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Activity Transitions</string>
    <string name="title_activity_support">Support Fragment Transitions</string>
    <string name="title_activity_native">Native Fragment Transitions</string>
    <string name="title_activity_c2_1_DisplayingWebInformation">DisplayingWebInformation</string>
    <string name="title_activity_c3_2_WebViewEvents">WebViewEvents</string>
    <string name="title_activity_c3_5_DownloadActivity">DownloadActivity</string>
    <string name="title_activity_c3_13_BeamActivity">BeamActivity</string>
    <string name="title_activity_c3_13_NfcActivity">NfcActivity</string>
    <string name="title_activity_c3_13_NfcActivity1">MenuNFC</string>
    <string name="title_activity_c3_6_Rest">REST</string>
    <string name="title_activity_c3_7_JSON">JSON</string>
    <string name="title_activity_c1e12_StaticTransform">Static Transform</string>
    <string name="title_activity_c1e12_TransformScroller">Transform Scroller</string>
    <string name="title_activity_ej12_TransformScroller">StaticTransforms</string>
    <string name="title_activity_ej13_RecyclerView">RecyclerView</string>
    <string name="title_activity_e3_java_script">Java Script</string>
    <string name="drawer_open">Navigation Drawer Opened</string>
    <string name="drawer_close">Navigation Drawer Closed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_delete">Delete</string>
    <string name="app_namec2e1">Styles/Themes</string>
    <string name="label_actionbar">Action Bar</string>
    <string name="label_toolbar">Toolbar</string>
    <string name="action_settingsc2e1">Settings</string>
    <string name="action_send">Send</string>
    <string name="lock_name">Orientation Lock</string>
    <string name="manual_name">Manual Rotation</string>
    <string name="app_namec2e3">Rotation Sample</string>
    <string name="hello">Hello World, MyActivity!</string>
    <string name="app_namec2e8">Key Overrides</string>
    <string name="app_namec2e7">OptionsMenu</string>
    <string name="menu_settingsc2e7">Settings</string>
    <string name="title_activity_options">Options Menu</string>
    <string name="title_activity_c3e8_XmlPull">XmlPull</string>
    <string name="label_feed">XmlPull Feed</string>
    <string name="label_local">XmlPull Resource</string>
    <string name="title_activity_c3e82_XmlSax">XmlSAX</string>
    <string name="title_activity_c3e9_SMS">SMS</string>
    <string name="title_activity_c3e11_Bluetooth">Bluetooth Communicator</string>
    <string name="title_activity_c3e12_Reachability">Reachability</string>
    <string name="title_activity_c3e14_USBActivity">USBActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_aplicacion">Asteroides</string>
    <string name="btn_jugar">Jugar</string>
    <string name="btn_configurar">Configurar</string>
    <string name="btn_acercaDe">Acerca de</string>
    <string name="btn_salir">Salir</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="details_delete">Delete</string>
    <string name="details_edit">Edit</string>
    <string name="title_activity_add_place">Add new place</string>
    <string name="title_activity_details">Details</string>
    <string name="add_new_place_button">Add new place</string>
    <string name="title_activity_edit_place">Edit place</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="blank"></string>
    <string name="sort_dialog_title">Sort</string>
    <string name="button_add_place">Add new place</string>
    <string name="img_intent_key">img</string>
    <string name="object_intent_key">object</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="comment_hint">Comment</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="add_img_description">add_img</string>
    <string name="place_img_description">place_img</string>
    <string name="rating_from">Rating from:</string>
    <string name="rating_to">Rating to:</string>
    <string name="direction_title">Direction:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="place_toast">place</string>
    <string name="city_toast">city</string>
    <string name="country_toast">country</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_add_new_place">Add new place</string>
    <string name="tag_hint">Tag</string>
    <string name="add_tag">Add tag</string>
    <string name="details_tags">Tags</string>
    <string name="rating_toast">rating</string>
    <string name="title_section_lista">Lista</string>
    <string name="title_section_mapa">Mapa</string>
    <string name="title_activity_principal">Mis lugares</string>
    <string name="text_no_places">No tienes lugares guardados</string>
    <string name="text_imagen_lugar">Imagen del lugar</string>
    <string name="text_nombre_lugar">Nombre del lugar</string>
    <string name="text_descripcion_lugar">Descripción del lugar</string>
    <string name="text_map_unavaliable">Mapa no disponible</string>
    <string name="title_activity_mostrar_lugar">MostrarLugarActivity</string>
    <string name="title_activity_editar_lugar">EditarLugarActivity</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="text_button_save">Guardar</string>
    <string name="text_button_create">Crear</string>
    <string name="text_name">Nombre</string>
    <string name="text_description">Description</string>
    <string name="text_photo">Foto del lugar</string>
    <string name="text_title_image_chooser">Tomar imagen de&#8230;</string>
    <string name="text_camera">Camara</string>
    <string name="text_gallery">Galería</string>
    <string name="text_icon_app_image">Icono de aplicación de imagen</string>
    <string name="error_text_take_photo">No se pudo realizar la foto</string>
    <string name="error_text_empty_name">Debe introducir un nombre</string>
    <string name="text_place_saved">Lugar guardado</string>
    <string name="error_place_save">No se ha podido guardar el lugar</string>
    <string name="text_confirm_discard">¿Seguro que quieres borrar este lugar?</string>
    <string name="title_activity_show_place_photo">ShowPlacePhotoActivity</string>
    <string name="action_search">Buscar</string>
    <string name="search_hint">Busca un lugar</string>
    <string name="error_text_get_photo">No se ha podido obtener la foto</string>
    <string name="text_no_photo">Sin foto</string>
    <string name="text_edit">Editar</string>
    <string name="text_delete">Eliminar</string>
</resources>